# pensions-panorama

./: .gitignore  NOTES.md  README.md  pyproject.toml  requirements.txt  run_config.yaml
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: ssa_updates_index.json
data/deep_profiles/: CRI.yaml  JOR.yaml  MAR.yaml  NZL.yaml  _template.yaml
data/params/: AFG.yaml  AGO.yaml  ALB.yaml  ARE.yaml  ARG.yaml  ARM.yaml  ATG.yaml  AUS.yaml  AUT.yaml  AZE.yaml  BDI.yaml  BEL.yaml  BEN.yaml  BFA.yaml  BGD.yaml  BGR.yaml  BHR.yaml  BHS.yaml  BIH.yaml  BLR.yaml  BLZ.yaml  BOL.yaml  BRA.yaml  BRB.yaml  BRN.yaml  BTN.yaml  BWA.yaml  CAF.yaml  CAN.yaml  CHE.yaml  CHL.yaml  CHN.yaml  CIV.yaml  CMR.yaml  COD.yaml  COG.yaml  COL.yaml  CPV.yaml  CRI.yaml  CUB.yaml  (+151 more)
deploy/: nginx.conf  pensions-panorama.service  setup.sh
pensions_panorama/: __init__.py  cli.py  config.py
pensions_panorama/deep_profile/: __init__.py  builder.py
pensions_panorama/model/: __init__.py  assumptions.py  calculator.py  pension_engine.py  pension_wealth.py  tax_engine.py
pensions_panorama/reporting/: __init__.py  charts.py  country_report.py  export.py
pensions_panorama/retirement_cost/: connectors.py  engine.py  types.py
pensions_panorama/schema/: __init__.py  deep_profile_schema.py  params_schema.py
pensions_panorama/sources/: __init__.py  ilostat_sdmx.py  un_dataportal.py  (+2 more)
scripts/: add_missing_pillars.py  bulk_enrich_yaml.py  fetch_pensions_dashboard.py
tests/: __init__.py  conftest.py  test_calculator.py  test_deep_profile.py  test_pension_engine.py  test_schema.py  test_worker_types.py  test_worldbank.py
(+192 files in other folders)
